--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -10,7 +10,7 @@
                 <input type="number" formControlName="maxControl" placeholder="Maximum">
             </div>
             <div class="input">
-                <button (click)="updateRange()">Filter</button>
+                <button (click)="filterList()">Filter</button>
             </div>
         </div>
     </form>
